# auth/internal/handler/rest/oauth2.go
@@ -7,7 +7,7 @@ import (
 	"time"
 
 	"github.com/labstack/echo/v4"
-	serviceoauth2 "github.com/udholdenhed/unotes/auth/internal/service/oauth2"
+	"github.com/udholdenhed/unotes/auth/internal/service/oauth2"
 )
 
 type oAuth2SignUpUserModel struct {
@@ -23,9 +23,10 @@ type oAuth2SignUpUserModel struct {
 // @Param       input body oAuth2SignUpUserModel true "account info"
 // @Success     204
 // @Failure     400     {object} errors.HTTPError
+// @Failure     409     {object} errors.HTTPError
 // @Failure     500     {object} errors.HTTPError
 // @Failure     default {object} errors.HTTPError
-// @Router      /serviceoauth2/sign-up [post]
+// @Router      /oauth2/sign-up [post]
 func (h *Handler) oAuth2SignUp(c echo.Context) error {
 	input := new(oAuth2SignUpUserModel)
 	if err := c.Bind(input); err != nil {
@@ -36,7 +37,7 @@ func (h *Handler) oAuth2SignUp(c echo.Context) error {
 		return err
 	}
 
-	request := &serviceoauth2.SignUpRequest{
+	request := &oauth2.SignUpRequest{
 		Username: input.Username,
 		Password: input.Password,
 	}
@@ -45,18 +46,18 @@ func (h *Handler) oAuth2SignUp(c echo.Context) error {
 	defer cancel()
 
 	_, err := h.services.OAuth2Service.SignUpRequestHandler.Handler(ctx, request)
-	if err != nil {
-		if errors.Is(err, serviceoauth2.ErrUserAlreadyExist) {
-			return echo.NewHTTPError(http.StatusBadRequest, "user already exist").SetInternal(err)
-		}
+	if errors.Is(err, oauth2.ErrSignUpUserAlreadyExist) {
+		return echo.NewHTTPError(http.StatusConflict, "A user with this username already exists!").SetInternal(err)
+	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
+
 	return c.NoContent(http.StatusNoContent)
 }
 
 type oAuth2SignInUserModel struct {
-	Username string `json:"username" validate:"required" example:"username"`
-	Password string `json:"password" validate:"required" example:"password"`
+	Username string `json:"username" validate:"required,min=4,max=32" example:"username"`
+	Password string `json:"password" validate:"required,min=8,max=64" example:"password"`
 }
 
 type oAuth2SignInUserResult struct {
@@ -75,7 +76,7 @@ type oAuth2SignInUserResult struct {
 // @Failure     404     {object} errors.HTTPError
 // @Failure     500     {object} errors.HTTPError
 // @Failure     default {object} errors.HTTPError
-// @Router      /serviceoauth2/sign-in [post]
+// @Router      /oauth2/sign-in [post]
 func (h *Handler) oAuth2SignIn(c echo.Context) error {
 	input := new(oAuth2SignInUserModel)
 	if err := c.Bind(input); err != nil {
@@ -86,7 +87,7 @@ func (h *Handler) oAuth2SignIn(c echo.Context) error {
 		return err
 	}
 
-	request := &serviceoauth2.SignInRequest{
+	request := &oauth2.SignInRequest{
 		Username: input.Username,
 		Password: input.Password,
 	}
@@ -95,12 +96,11 @@ func (h *Handler) oAuth2SignIn(c echo.Context) error {
 	defer cancel()
 
 	result, err := h.services.OAuth2Service.SingInRequestHandler.Handle(ctx, request)
-	if err != nil {
-		if errors.Is(err, serviceoauth2.ErrUserNotFound) {
-			return echo.NewHTTPError(http.StatusBadRequest, "user not found")
-		} else if errors.Is(err, serviceoauth2.ErrInvalidPassword) {
-			return echo.NewHTTPError(http.StatusBadRequest, "invalid user password")
-		}
+	if errors.Is(err, oauth2.ErrSignInUserNotFound) {
+		return echo.NewHTTPError(http.StatusNotFound, "User with that username was not found.")
+	} else if errors.Is(err, oauth2.ErrSignInInvalidPassword) {
+		return echo.NewHTTPError(http.StatusBadRequest, "Incorrect user password.")
+	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
 
@@ -111,7 +111,7 @@ func (h *Handler) oAuth2SignIn(c echo.Context) error {
 }
 
 type oAuth2LogOutModel struct {
-	AccessToken string `json:"access_token" validate:"required"`
+	AccessToken string `json:"access_token" validate:"required,jwt" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"`
 }
 
 // @Summary     oAuth2 sign out
@@ -124,7 +124,7 @@ type oAuth2LogOutModel struct {
 // @Failure     400     {object} errors.HTTPError
 // @Failure     500     {object} errors.HTTPError
 // @Failure     default {object} errors.HTTPError
-// @Router      /serviceoauth2/sign-out [post]
+// @Router      /oauth2/sign-out [post]
 func (h *Handler) oAuth2SignOut(c echo.Context) error {
 	input := new(oAuth2LogOutModel)
 	if err := c.Bind(input); err != nil {
@@ -135,7 +135,7 @@ func (h *Handler) oAuth2SignOut(c echo.Context) error {
 		return err
 	}
 
-	request := &serviceoauth2.SignOutRequest{
+	request := &oauth2.SignOutRequest{
 		AccessToken: input.AccessToken,
 	}
 
@@ -143,10 +143,9 @@ func (h *Handler) oAuth2SignOut(c echo.Context) error {
 	defer cancel()
 
 	_, err := h.services.OAuth2Service.SignOutRequestHandler.Handle(ctx, request)
-	if err != nil {
-		if errors.Is(err, serviceoauth2.ErrInvalidOrExpiredToken) {
-			return echo.NewHTTPError(http.StatusBadRequest, "invalid or expired token")
-		}
+	if errors.Is(err, oauth2.ErrSignOutInvalidOrExpiredToken) {
+		return echo.NewHTTPError(http.StatusBadRequest, "Invalid or expired token.")
+	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
 
@@ -154,7 +153,7 @@ func (h *Handler) oAuth2SignOut(c echo.Context) error {
 }
 
 type oAuth2RefreshModel struct {
-	RefreshToken string `json:"refresh_token" validator:"required"`
+	RefreshToken string `json:"refresh_token" validator:"required,jwt" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"`
 }
 
 type oAuth2RefreshResult struct {
@@ -172,7 +171,7 @@ type oAuth2RefreshResult struct {
 // @Failure     400     {object} errors.HTTPError
 // @Failure     500     {object} errors.HTTPError
 // @Failure     default {object} errors.HTTPError
-// @Router      /serviceoauth2/refresh [post]
+// @Router      /oauth2/refresh [post]
 func (h *Handler) oAuth2Refresh(c echo.Context) error {
 	input := new(oAuth2RefreshModel)
 	if err := c.Bind(input); err != nil {
@@ -183,7 +182,7 @@ func (h *Handler) oAuth2Refresh(c echo.Context) error {
 		return err
 	}
 
-	request := &serviceoauth2.RefreshRequest{
+	request := &oauth2.RefreshRequest{
 		RefreshToken: input.RefreshToken,
 	}
 
@@ -191,10 +190,9 @@ func (h *Handler) oAuth2Refresh(c echo.Context) error {
 	defer cancel()
 
 	result, err := h.services.OAuth2Service.RefreshRequestHandler.Handle(ctx, request)
-	if err != nil {
-		if errors.Is(err, serviceoauth2.ErrInvalidOrExpiredToken) {
-			return echo.NewHTTPError(http.StatusBadRequest, "invalid or expired token")
-		}
+	if errors.Is(err, oauth2.ErrRefreshInvalidOrExpiredToken) {
+		return echo.NewHTTPError(http.StatusBadRequest, "Invalid or expired token.")
+	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
 
